Ajout des premiers tests